syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message StoreChunk {
    string fileName = 1;
    int32 chunkId = 2;
    bytes data = 3;
    string method = 4;
}

message RetrieveFile {
    string fileName = 1;
    string method = 2;
}

message StorageMessageWrapper {
    oneof msg {
        StoreChunk storeChunkMsg = 1;
        RetrieveFile retrieveFileMsg = 2;
    }
}

